# qa_bot

./: .gitignore  README.md  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.github/ workflows/: tests.yml
.github/workflows/: blank.yml  tests.yml
app/: README.md  client.py  data.py  document_retrieval_system.py  main.py  model.py  server.py  telegram_loader.py  type_defs.py  utils.py
docker/: tests.dockerfile
tests/: simple_test.py
